--- a/.github/workflows/build-container-image.yml
+++ b/.github/workflows/build-container-image.yml
@@ -1,5 +1,5 @@
 ---
-name: Build docker image
+name: Build container image
 
 "on":
   workflow_dispatch:
@@ -7,19 +7,19 @@ name: Build docker image
     - cron: "0 3 * * *"
   push:
     paths:
-      - .github/workflows/build-docker-image.yml
+      - .github/workflows/build-container-image.yml
       - Containerfile
       - files/**
       - scripts/*
   pull_request:
     paths:
-      - .github/workflows/build-docker-image.yml
+      - .github/workflows/build-container-image.yml
       - Containerfile
       - files/**
       - scripts/*
 
 jobs:
-  build-docker-image:
+  build-container-image:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -32,7 +32,7 @@ jobs:
       - name: Setup docker
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to docker registry
+      - name: Login to container registry
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.DOCKER_REGISTRY }}
@@ -40,14 +40,14 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
         if: github.ref == 'refs/heads/main'
 
-      - name: Build docker image
+      - name: Build container image
         run: scripts/build.sh
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
           VERSION: ${{ matrix.version }}
           REPOSITORY: osism/enterprise/uyuni
 
-      - name: Push docker image
+      - name: Push container image
         run: |
           scripts/push.sh
         env:
