--- a/.github/workflows/build-container-image.yml
+++ b/.github/workflows/build-container-image.yml
@@ -29,29 +29,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup docker
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-        if: github.ref == 'refs/heads/main'
-
       - name: Build container image
         run: scripts/build.sh
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
           VERSION: ${{ matrix.version }}
-          REPOSITORY: osism/enterprise/uyuni
+          REPOSITORY: osism/uyuni
 
       - name: Push container image
         run: |
           scripts/push.sh
         env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           VERSION: ${{ matrix.version }}
-          REPOSITORY: osism/enterprise/uyuni
+          REPOSITORY: osism/uyuni
         if: github.ref == 'refs/heads/main'
