--- a/.github/workflows/build-container-image.yml
+++ b/.github/workflows/build-container-image.yml
@@ -45,4 +45,6 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           VERSION: ${{ matrix.version }}
           REPOSITORY: osism/uyuni
-        if: github.ref == 'refs/heads/main'
+        if: |
+          github.repository == 'osism/container-image-uyuni' &&
+          github.ref == 'refs/heads/main'
