github: run branch builds on main only
partly: osism/issues#85

Signed-off-by: Ramona Rautenberg <rautenberg@osism.tech>

--- a/.github/workflows/check-docker-syntax.yml
+++ b/.github/workflows/check-docker-syntax.yml
@@ -6,6 +6,8 @@ name: Check docker syntax
     paths:
       - Dockerfile
       - .github/workflows/check-docker-syntax.yml
+    branches:
+      - main
   pull_request:
     paths:
       - Dockerfile
